--- a/.gitignore
+++ b/.gitignore
@@ -156,7 +156,7 @@ cython_debug/
 .DS_Store
 example.env
 .env
-
+.virtual_documents/
 
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
